kub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-k8s-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbg
  template:
    metadata:
      labels:
        app: dbg
    spec:
      containers:
        - name: dbg
          image: dbg:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 30123
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            successThreshold: 3
#          volumeMounts:
#            - mountPath: /go/src
#              name: go-volume
#      volumes:
#        - name: go-volume
#          persistentVolumeClaim:
#            claimName: go-pvc
#      nodeSelector:
#        debug: "true"
