kub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dlv-service
spec:
  type: NodePort
  selector:
    app: dbg
  ports:
    - name: delve
      port: 30123
      targetPort: 30123
      nodePort: 30200

---

apiVersion: v1
kind: Service
metadata:
  name: dbg-service
spec:
  selector:
    app: dbg
  ports:
    - name: endpoint
      port: 8080
      targetPort: 8080
