kub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbg-ingress
spec:
  rules:
    - host: sedly.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbg-service
                port:
                  number: 8080
